--- a/Cogent-Great-Outdoors/src/main/resources/application.properties
+++ b/Cogent-Great-Outdoors/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://great-outdoors.ca5mxtjce2af.us-east-2.rds.amazonaws.com:3306/great-outdoors
+spring.datasource.url=jdbc:mysql://localhost:3306/great-outdoors
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
