--- a/Cogent-Great-Outdoors/src/main/resources/application.properties
+++ b/Cogent-Great-Outdoors/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/greatoutdoors
 spring.datasource.username=root
 
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.password=YHJiskcieo/23
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=5000
