--- a/Cogent-Great-Outdoors/src/main/resources/application.properties
+++ b/Cogent-Great-Outdoors/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/great-outdoors
 spring.datasource.username=root
 
-spring.datasource.password=passql
+spring.datasource.password=YHJiskcieo/23
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
