--- a/Cogent-Great-Outdoors/src/main/resources/application.properties
+++ b/Cogent-Great-Outdoors/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=5000
 
-cogent.demo.jwtSecret=cogent
-cogent.demo.jwtExpirationMs=86400000
+cogent.go.jwtSecret=cogent
+cogent.go.jwtExpirationMs=86400000
