--- a/Cogent-Great-Outdoors/src/main/resources/application.properties
+++ b/Cogent-Great-Outdoors/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/greatoutdoors
+spring.datasource.url=jdbc:mysql://great-outdoors.ca5mxtjce2af.us-east-2.rds.amazonaws.com:3306/great-outdoors
 spring.datasource.username=root
-spring.datasource.password=YHJiskcieo/23
+spring.datasource.password=password
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
